--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -1,21 +1,36 @@
 version: '3.7'
 
 services:
-  fuseki:
+#  fuseki:
+#    container_name: skosmos-fuseki
+#    hostname: fuseki
+#    user: root
+#    image: atomgraph/fuseki
+#    ports:
+#      - 9030:3030
+#    environment:
+#      - JAVA_OPTIONS=-Xmx16G -Xms16G
+#    volumes:
+#      - ./config/skosmos.ttl:/fuseki/configuration/skosmos.ttl:ro
+#      - type: bind
+#        source: ./databases
+#        target: /fuseki/databases
+#    command: [ "--config", "/fuseki/configuration/skosmos.ttl" ]
+  virtuoso:
     container_name: skosmos-fuseki
     hostname: fuseki
     user: root
-    image: atomgraph/fuseki
-    ports:
-      - 9030:3030
+    image: tenforce/virtuoso:1.3.1-virtuoso7.2.2
     environment:
-      - JAVA_OPTIONS=-Xmx16G -Xms16G
+      SPARQL_UPDATE: "true"
+      DEFAULT_GRAPH: "http://www.example.com/my-graph"
     volumes:
-      - ./config/skosmos.ttl:/fuseki/configuration/skosmos.ttl:ro
       - type: bind
         source: ./databases
         target: /fuseki/databases
-    command: [ "--config", "/fuseki/configuration/skosmos.ttl" ]
+    ports:
+      - "9030:8890"
+
   fuseki-cache:
     container_name: skosmos-fuseki-cache
     hostname: fuseki-cache
