--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.7'
 
 services:
   virtuoso:
-    container_name: skosmos-fuseki
-    hostname: fuseki
+    container_name: virtuoso
+    hostname: virtuoso
     user: root
     image: tenforce/virtuoso:1.3.1-virtuoso7.2.2
     environment:
@@ -35,7 +35,6 @@ services:
       - 9090:80
     depends_on:
       - virtuoso
-      - fuseki-cache
     volumes:
       - type: bind
         source: ./config/config-docker-compose.ttl
