--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       VIRT_Parameters_TraceOn: "exec" # enhanced logging
     volumes:
       - type: bind
-        source: dockerfiles/databases
+        source: ./databases
         target: /data
     ports:
       - 9030:8890
@@ -23,7 +23,7 @@ services:
       - 9031:80
     volumes:
       - type: bind
-        source: dockerfiles/config/varnish-default.vcl
+        source: ./config/varnish-default.vcl
         target: /etc/varnish/default.vcl
   skosmos:
     container_name: skosmos-web
@@ -38,5 +38,5 @@ services:
       - cache
     volumes:
       - type: bind
-        source: dockerfiles/config/config-docker-compose.ttl
+        source: ./config/config-docker-compose.ttl
         target: /var/www/html/config.ttl
