Testing docker compose

--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - 9031:80
     volumes:
-        source: ./config/varnish-default.vcl
+      - source: ./config/varnish-default.vcl
         target: /etc/varnish/default.vcl
   skosmos:
     container_name: skosmos-web
