--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - 9031:80
     volumes:
       - type: volume
-        source: ./config/varnish-default.vcl
+        source: taxonomy-config/varnish-default.vcl
         target: /etc/varnish/default.vcl
   skosmos:
     container_name: skosmos-web
@@ -38,5 +38,5 @@ services:
       - cache
     volumes:
       - type: bind
-        source: ./config/config-docker-compose.ttl
+        source: taxonomy-config/config-docker-compose.ttl
         target: /var/www/html/config.ttl
